2016-08-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * include/stdhdr.h, libgputils/gparchive.c, libgputils/gpsystem.c:
    Fixed some compiler warnings.

2016-08-11  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure, configure.ac:
    Fixed a Darwin bug.

2016-08-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/gpasm.c,
    gpasm/testsuite/test-regression,
    gpasm/testsuite/regression/source/assume.asm:
    Fixed the assume bug.

  * gputils/dump.c:
    bugfix

2016-08-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * config.h.in, include/stdhdr.h, configure, configure.ac,
    gpasm/directive.c, gpasm/evaluate.c, gpasm/gpasm.h.in,
    gpasm/lst.c, gpasm/parse.y, gpasm/processor.c, gputils/gpvo.c,
    libgputils/gpdis.c, libgputils/gpprocessor.c,
    libgputils/gpprocessor.h, libgputils/gptypes.h,
    libgputils/gpwritehex.c:
    The default compiler changed from gcc to clang. I corrected
    several warnings which are not indicated the gcc:
    "#290 1.5.0_RC2 clang warnings (format, ..." and other warnings.
    Thanks to ilovezfs for the report.

  * gpasm/util.c, gputils/block.c, gputils/dump.c,
    libgputils/gpcoffgen.c:
    Fixed some hidden error. (The gcc 5.6.1 has not given mark.)

  * include/libiberty.h:
    Code formatting.

2016-08-07  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpcoffgen.c:
    Fixed this bug: "#289 1.5.0_RC1 void function should not return ..."
    Thanks to ilovezfs for the report.

2016-08-07  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, configure, configure.ac:
    Changed the gputils version from 1.4.7 to 1.5.0.

  * libgputils/gpcoffgen.c, libgputils/gpcoffgen.h,
    libgputils/gpcofflink.c, libgputils/gpcoffopt.c,
    libgputils/gpwriteobj.c, libgputils/gpwriteobj.h:
    Moved these functions:
	gp_writeobj_has_data --> gp_coffgen_section_has_data
	gp_writeobj_is_absolute_object --> gp_coffgen_is_absolute_object
