@@ -1,4 +1,9 @@
 2016-08-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * config.h.in, configure, configure.ac, include/stdhdr.h,
+    libgputils/gparchive.c, libgputils/gpsystem.c:
+    Fixed the print format warnings.
+
+2016-08-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * include/stdhdr.h, libgputils/gparchive.c, libgputils/gpsystem.c:
     Fixed some compiler warnings.
 
